--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -26,21 +26,57 @@
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
+  --ifm-navbar-height: 80px;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
+  --ifm-color-primary: #ff710b;
   --ifm-color-primary-dark: #21af90;
   --ifm-color-primary-darker: #1fa588;
   --ifm-color-primary-darkest: #1a8870;
   --ifm-color-primary-light: #29d5b0;
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
+  --ifm-navbar-height: 80px;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
 .hero {
-  height: calc(100vh - 150px)
+  height: calc(100vh - 150px);
+  background-image: url("/static/img/behang.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+
+.hero__title {
+  color: white;
+}
+
+.hero .container::before{
+  content:url('/static/img/javaland.png'); /* with class ModalCarrot ??*/
+  position:relative; /*or absolute*/
+}
+
+.hero__subtitle {
+  color: white;
+}
+
+.hero .container .button {
+  color: white;
+  background-color: #ff710b;
+  border: 0;
+}
+
+.docMainContainer_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-Main-styles-module {
+  background-image: url("/static/img/behang.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+
+.theme-doc-sidebar-container{
+  background: rgb(39,41,47);
 }
