--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -56,7 +56,7 @@
 }
 
 .hero .container::before{
-  content:url('/static/img/javaland.png'); /* with class ModalCarrot ??*/
+  content:url('/static/img/openai.png'); /* with class ModalCarrot ??*/
   position:relative; /*or absolute*/
 }
 
