--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -89,3 +89,11 @@ aside {
   float: left;
   width: 50%;
 }
+
+blockquote {
+  background: rgb(255,255,255,0.8);
+  border-radius: 5px;
+  padding: 20px;
+  color: black;
+  border-left: 5px solid #ff710b;
+}
